--- a/How_to_build_own_text_summarizer_using_deep_learning.ipynb
+++ b/How_to_build_own_text_summarizer_using_deep_learning.ipynb
@@ -1432,15 +1432,15 @@
         "  #embedding layer\n",
         "  enc_emb =  Embedding(x_voc, embedding_dim,trainable=True)(encoder_inputs)\n",
         "\n",
-        "  #encoder gru 1\n",
+        "  #encoder GRU 1\n",
         "  encoder_gru1 = GRU(latent_dim,return_sequences=True,return_state=True,dropout=0.4,recurrent_dropout=0.4)\n",
         "  encoder_output1, state_1 = encoder_gru1(enc_emb)\n",
         "\n",
-        "  #encoder gru 2\n",
+        "  #encoder GRU 2\n",
         "  encoder_gru2 = GRU(latent_dim,return_sequences=True,return_state=True,dropout=0.4,recurrent_dropout=0.4)\n",
         "  encoder_output2, state_2 = encoder_gru2(encoder_output1)\n",
         "\n",
-        "  #encoder gru 3\n",
+        "  #encoder GRU 3\n",
         "  encoder_gru3 = GRU(latent_dim, return_state=True, return_sequences=True,dropout=0.4,recurrent_dropout=0.4)\n",
         "  encoder_outputs, state = encoder_gru3(encoder_output2)\n",
         "\n",
@@ -1458,10 +1458,10 @@
         "  attn_layer = AttentionLayer(name='attention_layer')\n",
         "  attn_out, attn_states = attn_layer([encoder_outputs, decoder_outputs])\n",
         "\n",
-        "  # Concat attention input and decoder LSTM output\n",
+        "  # Concat attention input and decoder GRU output\n",
         "  decoder_concat_input = Concatenate(axis=-1, name='concat_layer')([decoder_outputs, attn_out])\n",
         "\n",
-        "  #dense layer\n",
+        "  # dense layer\n",
         "  decoder_dense =  TimeDistributed(Dense(y_voc, activation='softmax'))\n",
         "  decoder_outputs = decoder_dense(decoder_concat_input)\n",
         "\n",
@@ -1577,22 +1577,22 @@
         "  #embedding layer\n",
         "  enc_emb =  Embedding(x_voc, embedding_dim,trainable=True)(encoder_inputs)\n",
         "\n",
-        "  #encoder lstm 1\n",
+        "  #encoder bi_gru 1\n",
         "  encoder_gru1 = Bidirectional(GRU(latent_dim,return_sequences=True,return_state=True,dropout=0.4,recurrent_dropout=0.4),\n",
         "                               merge_mode=\"ave\")\n",
         "  encoder_output1, state_fw_1, state_bw_1 = encoder_gru1(enc_emb)\n",
         "\n",
-        "  #encoder lstm 2\n",
+        "  #encoder bi_gru 2\n",
         "  encoder_gru2 = Bidirectional(GRU(latent_dim,return_sequences=True,return_state=True,dropout=0.4,recurrent_dropout=0.4),\n",
         "                              merge_mode=\"ave\")\n",
         "  encoder_output2, state_fw_2, state_bw_2 = encoder_gru2(encoder_output1)\n",
         "\n",
-        "  #encoder lstm 3\n",
+        "  #encoder bi_gru 3\n",
         "  encoder_gru3 = Bidirectional(GRU(latent_dim, return_state=True, return_sequences=True,dropout=0.4,recurrent_dropout=0.4),\n",
         "                              merge_mode=\"ave\")\n",
         "  encoder_outputs, state_fw_3, state_bw_3 = encoder_gru3(encoder_output2)\n",
         "\n",
-        "  # Set up the decoder, using `encoder_states` as initial state.\n",
+        "  # Decoder\n",
         "  decoder_inputs = Input(shape=(None,))\n",
         "\n",
         "  #embedding layer\n",
@@ -1607,10 +1607,10 @@
         "  attn_layer = AttentionLayer(name='attention_layer')\n",
         "  attn_out, attn_states = attn_layer([encoder_outputs, decoder_outputs])\n",
         "\n",
-        "  # Concat attention input and decoder LSTM output\n",
+        "  # Concat attention input and decoder bi_gru output\n",
         "  decoder_concat_input = Concatenate(axis=-1, name='concat_layer')([decoder_outputs, attn_out])\n",
         "\n",
-        "  #dense layer\n",
+        "  # dense layer\n",
         "  decoder_dense =  TimeDistributed(Dense(y_voc, activation='softmax'))\n",
         "  decoder_outputs = decoder_dense(decoder_concat_input)\n",
         "\n",
