--- a/How_to_build_own_text_summarizer_using_deep_learning.ipynb
+++ b/How_to_build_own_text_summarizer_using_deep_learning.ipynb
@@ -87,6 +87,8 @@
         "\n",
         "from IPython.display import clear_output\n",
         "\n",
+        "from pathlib import Path\n",
+        "\n",
         "from bs4 import BeautifulSoup\n",
         "\n",
         "from nltk.corpus import stopwords\n",
@@ -159,17 +161,28 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# True if in Google Colab, else if in local.\n",
+        "colab = False\n",
+        "\n",
+        "if colab:\n",
+        "    from google.colab import drive\n",
+        "    drive.mount('/content/drive')\n",
+        "    pj_path = \"/content/drive/MyDrive/Colab Notebooks\"\n",
+        "else:\n",
+        "    pj_path = \".\""
+      ]
+    },
+    {
+      "cell_type": "code",
       "metadata": {
         "trusted": true,
         "id": "wnK5o4Z1Fxcj"
       },
       "source": [
-        "from google.colab import drive\n",
-        "drive.mount('/content/drive')\n",
-        "\n",
-        "pj_path = \"/content/drive/MyDrive/Colab Notebooks\"\n",
-        "# pj_path = \".\"\n",
-        "\n",
         "url = pj_path + \"/dataset/Reviews.csv\"\n",
         "data=pd.read_csv(url,nrows=100000)\n",
         "# data=pd.read_csv(url)"
@@ -1001,11 +1014,10 @@
         "  \n",
         "  if not os.path.exists(os.path.dirname(path)):\n",
         "    try:\n",
-        "      os.mkdir(path)\n",
-        "    except OSError:\n",
-        "      print(\"Creation of the directory %s failed\" % path)\n",
-        "    else:\n",
+        "      Path(path).mkdir(parents=True, exist_ok=True)\n",
         "      print(\"Successfully created the directory %s \" % path)\n",
+        "    except:\n",
+        "      print(\"Creation of the directory %s failed\" % path)      \n",
         "  model.save_weights(path)\n",
         "  print(\"Model saved succesfully!\") \n",
         "\n",
@@ -1036,8 +1048,16 @@
         "id": "5PzrDnLFavR4"
       },
       "source": [
-        "def plot_history(history):\n",
+        "def plot_history(history, model):\n",
         "  print(history.history.keys())\n",
+        "\n",
+        "  savefig_url = f\"./graphs/{model.name}/\"\n",
+        "  if not os.path.exists(os.path.dirname(savefig_url)):\n",
+        "    try:\n",
+        "      Path(savefig_url).mkdir(parents=True, exist_ok=True)\n",
+        "      print(f\"Folder {savefig_url} created\")\n",
+        "    except:\n",
+        "      raise OSError(f\"Creation of the directory {savefig_url} failed\")\n",
         "\n",
         "  # Accuracy\n",
         "  plt.plot(history.history['accuracy'])\n",
@@ -1047,6 +1067,8 @@
         "  plt.xlabel('epoch')\n",
         "  plt.legend(['train', 'test'], loc='upper left')\n",
         "  plt.show()\n",
+        "  plt.savefig(savefig_url+\"Accuracy.png\", dpi=300)\n",
+        "  print(f\"Accuracy graph saved in {savefig_url}\")\n",
         "\n",
         "  # Loss\n",
         "  plt.plot(history.history['loss'])\n",
@@ -1055,7 +1077,9 @@
         "  plt.ylabel('loss')\n",
         "  plt.xlabel('epoch')\n",
         "  plt.legend(['train', 'test'], loc='upper left')\n",
-        "  plt.show()"
+        "  plt.show()\n",
+        "  plt.savefig(savefig_url+\"Loss.png\", dpi=300)\n",
+        "  print(f\"Loss graph saved in {savefig_url}\")"
       ],
       "execution_count": null,
       "outputs": []
@@ -1077,13 +1101,13 @@
       "source": [
         "date_now = datetime.datetime.now().strftime(\"%Y%m%d-%H%M%S\")\n",
         "\n",
-        "EPOCHS = 2\n",
+        "EPOCHS = 50\n",
         "BATCH_SIZE = 128\n",
         "\n",
         "latent_dim    = 300\n",
         "embedding_dim = 100\n",
         "\n",
-        "is_model_lstm_trained = False\n",
+        "is_model_lstm_trained = True\n",
         "is_model_gru_trained  = False\n",
         "is_model_bi_trained   = False"
       ],
@@ -1335,8 +1359,8 @@
         "                                              y_val.reshape(y_val.shape[0],\n",
         "                                                            y_val.shape[1], \n",
         "                                                            1)[:,1:]))\n",
+        "      plot_history(history, model_lstm)\n",
         "      save_model(model_lstm)  \n",
-        "      load_model(model_lstm)\n",
         "  else:\n",
         "      load_model(model_lstm)\n",
         "\n",
@@ -1366,9 +1390,7 @@
         "      [decoder_inputs] + [decoder_hidden_state_input,decoder_state_input_h, decoder_state_input_c],\n",
         "      [decoder_outputs2] + [state_h2, state_c2])\n",
         "  \n",
-        "  return (history, encoder_model, decoder_model)\n",
-        "\n",
-        "history_lstm, encoder_lstm, decoder_lstm = get_model_lstm()"
+        "  return (encoder_model, decoder_model)"
       ],
       "execution_count": null,
       "outputs": []
@@ -1379,7 +1401,7 @@
         "id": "Va1TjE53aQFq"
       },
       "source": [
-        "Let's plot how well this model have done during training."
+        "Let's create the model."
       ]
     },
     {
@@ -1388,7 +1410,7 @@
         "id": "JxeOf9LOaV3Q"
       },
       "source": [
-        "plot_history(history_lstm)"
+        "encoder_lstm, decoder_lstm = get_model_lstm()    "
       ],
       "execution_count": null,
       "outputs": []
@@ -1494,8 +1516,8 @@
         "                                              y_val.reshape(y_val.shape[0],\n",
         "                                                            y_val.shape[1], \n",
         "                                                            1)[:,1:]))\n",
-        "      save_model(model_gru)  \n",
-        "      load_model(model_gru)\n",
+        "      plot_history(history)\n",
+        "      save_model(model_gru, model_gru)  \n",
         "  else:\n",
         "      load_model(model_gru)\n",
         "      \n",
@@ -1524,9 +1546,7 @@
         "      [decoder_inputs] + [decoder_hidden_state_input,decoder_state_input],\n",
         "      [decoder_outputs2] + [state_2])\n",
         "  \n",
-        "  return (history, encoder_model, decoder_model)\n",
-        "\n",
-        "history_gru, encoder_gru, decoder_gru = get_model_gru()"
+        "  return (encoder_model, decoder_model)"
       ],
       "execution_count": null,
       "outputs": []
@@ -1537,7 +1557,7 @@
         "id": "AvPG9ildTEk7"
       },
       "source": [
-        "Let's plot how well this model have done during training."
+        "Let's create the model."
       ]
     },
     {
@@ -1546,7 +1566,7 @@
         "id": "SGqswiNy21Gw"
       },
       "source": [
-        "plot_history(history_gru)"
+        "encoder_gru, decoder_gru = get_model_gru()"
       ],
       "execution_count": null,
       "outputs": []
@@ -1639,8 +1659,8 @@
         "                                            y_val.reshape(y_val.shape[0],\n",
         "                                                          y_val.shape[1], \n",
         "                                                          1)[:,1:]))\n",
-        "    save_model(model_bi)\n",
-        "    load_model(model_bi)\n",
+        "    plot_history(history)\n",
+        "    save_model(model_bi, model_bi)\n",
         "  else:\n",
         "    load_model(model_bi)\n",
         "\n",
@@ -1670,9 +1690,7 @@
         "      [decoder_inputs] + [decoder_hidden_state_input,decoder_state_input_fw, decoder_state_input_bw],\n",
         "      [decoder_outputs2] + [state_fw_2] + [state_bw_2])\n",
         "  \n",
-        "  return (history, encoder_model, decoder_model)\n",
-        "\n",
-        "history_bi, encoder_bi, decoder_bi = get_model_bi()"
+        "  return (encoder_model, decoder_model)"
       ],
       "execution_count": null,
       "outputs": []
@@ -1683,7 +1701,7 @@
         "id": "gESK0sOSqteI"
       },
       "source": [
-        "Let's plot how well this model have done during training."
+        "Let's create the model."
       ]
     },
     {
@@ -1692,7 +1710,7 @@
         "id": "RzNBjrNQ3gBI"
       },
       "source": [
-        "plot_history(history_bi)"
+        "encoder_bi, decoder_bi = get_model_bi()"
       ],
       "execution_count": null,
       "outputs": []
