Modificato punto di salvataggio per i grafici di tensorboard

--- a/How_to_build_own_text_summarizer_using_deep_learning.ipynb
+++ b/How_to_build_own_text_summarizer_using_deep_learning.ipynb
@@ -1931,7 +1931,7 @@
         "  es = EarlyStopping(monitor='val_loss', mode='min', verbose=1, patience=2)\n",
         "\n",
         "  # Tensorboard will let us see the logs \n",
-        "  log_dir = \"logs/fit_lstm/\" + date_now\n",
+        "  log_dir = pj_path + \"/tensorboard/\"+ model_lstm.name +\"/\" + date_now\n",
         "  tb = TensorBoard(log_dir=log_dir, histogram_freq=1)\n",
         "\n",
         "  # We’ll train the model on a batch size of 128 and validate it on the \n",
@@ -2146,7 +2146,7 @@
         "  es = EarlyStopping(monitor='val_loss', mode='min', verbose=1,patience=2)\n",
         "\n",
         "  # Train the model if it's not already trained\n",
-        "  log_dir = \"logs/fit_gru/\" + date_now\n",
+        "  log_dir = pj_path + \"/tensorboard/\"+ model_gru.name +\"/\" + date_now\n",
         "  tb = TensorBoard(log_dir=log_dir, histogram_freq=1)\n",
         "\n",
         "  if not is_model_gru_trained:\n",
@@ -2344,7 +2344,7 @@
         "\n",
         "  es = EarlyStopping(monitor='val_loss', mode='min', verbose=1,patience=2)\n",
         "\n",
-        "  log_dir = \"logs/fit_bi/\" + date_now\n",
+        "  log_dir = pj_path + \"/tensorboard/\"+ model_bi.name + \"/\" + date_now\n",
         "  tb = TensorBoard(log_dir=log_dir, histogram_freq=1)\n",
         "\n",
         "  if not is_model_bi_trained:\n",
@@ -3589,7 +3589,8 @@
         "        Dense(5, activation='sigmoid')],\n",
         "        name=\"rating_LSTM_evaluation_model\")\n",
         "\n",
-        "    tb_dir = f\"tensorboard/rating_net/{date_now}\"\n",
+        "    tb_dir = pj_path + \"/tensorboard/\"+ rating_model.name +\"/\" + date_now\n",
+        "\n",
         "    tb = TensorBoard(log_dir=tb_dir, histogram_freq=1)\n",
         "    earlystop = EarlyStopping(monitor='val_loss', mode='min', verbose=1, patience=2)\n",
         "\n",
@@ -3879,7 +3880,8 @@
         "        Dense(2)\n",
         "        ], name=\"sentiment_LSTM_evaluation_model\")\n",
         "\n",
-        "    tb_dir = pj_path + f\"tensorboard/sentiment_net/{date_now}\"\n",
+        "    tb_dir = pj_path + \"/tensorboard/\"+ sentiment_model.name +\"/\" + date_now\n",
+        "\n",
         "    tb = TensorBoard(log_dir=tb_dir, histogram_freq=1)\n",
         "    earlystop = EarlyStopping(monitor = 'val_loss', mode='min', verbose=1,patience=2)\n",
         "\n",
@@ -4077,7 +4079,8 @@
         "        Dense(2)\n",
         "        ], name=\"sentiment_GRU_evaluation_model\")\n",
         "\n",
-        "    tb_dir = pj_path + f\"tensorboard/sentiment_gru_net/{date_now}\"\n",
+        "    tb_dir = pj_path + \"/tensorboard/\"+ sentiment_gru_model.name +\"/\" + date_now\n",
+        "\n",
         "    tb = TensorBoard(log_dir=tb_dir, histogram_freq=1)\n",
         "    earlystop = EarlyStopping(monitor = 'val_loss', mode='min', verbose=1, patience=2)\n",
         "\n",
