implentate funzioni per gli score

--- a/How_to_build_own_text_summarizer_using_deep_learning.ipynb
+++ b/How_to_build_own_text_summarizer_using_deep_learning.ipynb
@@ -1774,51 +1774,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 145,
-      "metadata": {
-        "tags": []
-      },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "BLUE score:  0.1376666666666667\n"
-          ]
-        }
-      ],
+      "execution_count": 156,
+      "metadata": {},
+      "outputs": [],
       "source": [
-        "b_score=0\n",
-        "n=100\n",
-        "#chencherry = SmoothingFunction()\n",
-        "for i in range(0,n):\n",
-        "    b_score += float(modified_precision([seq2summary(y_test[i]).split()], decode_sequence(x_test[i].reshape(1,max_text_len)).split(), n=1)) \n",
-        "    #print(\"Original summary:\",seq2summary(y_test[i]).split())\n",
-        "    #print(\"Predicted summary:\",decode_sequence(x_test[i].reshape(1,max_text_len)).split())\n",
-        "    #print(float(modified_precision([seq2summary(y_test[i]).split()], decode_sequence(x_test[i].reshape(1,max_text_len)).split(), n=1)))\n",
-        "print(\"BLUE score: \", b_score/n)  "
+        "def bleuScore(intervallo):\n",
+        "    b_score = 0\n",
+        "    for i in range(0, intervallo):\n",
+        "        b_score += float(modified_precision([seq2summary(y_test[i]).split()], decode_sequence(x_test[i].reshape(1,max_text_len)).split(), n=1))\n",
+        "    b_score=b_score/intervallo\n",
+        "    return b_score"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 147,
+      "execution_count": 154,
       "metadata": {},
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "ROUGE score (avg):  0.12665295815295816\n\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
-        "for aggregator in ['Avg']:\n",
-        "    #print('Evaluation with {}'.format(aggregator))\n",
-        "    apply_avg = aggregator == 'Avg'\n",
-        "    #apply_best = aggregator == 'Best'\n",
+        "def rougeScoreAvg(intervallo):\n",
+        "    for aggregator in ['Avg']:\n",
+        "        apply_avg = aggregator == 'Avg'\n",
         "\n",
-        "    evaluator = rouge.Rouge(metrics=['rouge-n', 'rouge-l', 'rouge-w'],\n",
+        "        evaluator = rouge.Rouge(metrics=['rouge-n', 'rouge-l', 'rouge-w'], \n",
         "                           max_n=4,\n",
         "                           limit_length=True,\n",
         "                           length_limit=100,\n",
@@ -1828,19 +1806,34 @@
         "                           alpha=0.5, # Default F1_score\n",
         "                           weight_factor=1.2,\n",
         "                           stemming=True)\n",
-        "    all_hypothesis = []\n",
-        "    all_references = []\n",
-        "    for i in range(0,n):\n",
-        "        all_hypothesis.append(seq2summary(y_test[i]))\n",
-        "        all_references.append(decode_sequence(x_test[i].reshape(1,max_text_len)))\n",
-        "    scores = evaluator.get_scores(all_hypothesis, all_references)\n",
-        "    for metric, results in sorted(scores.items(), key=lambda x: x[0]):\n",
-        "        if apply_avg and metric == 'rouge-1':\n",
-        "            print(\"ROUGE score (avg): \", results['f'])  #'f' effettua una media tra recall 'r' e precision 'p'\n",
-        "        #if apply_best and metric == 'rouge-1':\n",
-        "            #print(results['f'])\n",
-        "    print()\n",
-        "\n"
+        "        all_hypothesis = []\n",
+        "        all_references = []\n",
+        "        for i in range(0,intervallo):\n",
+        "            all_hypothesis.append(seq2summary(y_test[i]))\n",
+        "            all_references.append(decode_sequence(x_test[i].reshape(1,max_text_len)))\n",
+        "        scores = evaluator.get_scores(all_hypothesis, all_references)\n",
+        "        for metric, results in sorted(scores.items(), key=lambda x: x[0]):\n",
+        "            if apply_avg and metric == 'rouge-1':\n",
+        "                return results['f']  #'f' effettua una media tra recall 'r' e precision 'p'\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 161,
+      "metadata": {},
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0.13901960784313724\n",
+            "0.13182667006196416\n"
+          ]
+        }
+      ],
+      "source": [
+        "print(bleuScore(170))\n",
+        "print(rougeScoreAvg(170))"
       ]
     },
     {
